[package]
name = "yew-authorize-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#framework
yew = "0.19.3"

#for get html target value
web-sys = {version = "0.3.60", futures = ["HtmlInputElement"]}
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"

#logging
gloo = "0.8.0"
gloo-utils = "0.1"

#serialize
serde = "1.0.145"
serde_json = "1.0.86"

#router
yew-router = "0.16"

#storage
yewdux = "0.8.2"
yewdux-functional = "0.1.0"

#css component
stylist = { version = "0.10.1", features = ["yew_integration"] }

#graphql
graphql_client = "0.11.0"

yewtil = {version = "0.4", features = ["future"]}